kubernetes/apps/kube-system/intel-gpu-resource-driver/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: intel-gpu-resource-driver-api
spec:
  endpointSelector:
    matchLabels:
      app: intel-gpu-resource-driver
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
